logging/master/fluentd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  namespace: logging
  labels:
    app: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
#      tolerations:
#      - key: node-role.kubernetes.io/master
#        effect: NoSchedule
      containers:
      - name: fluentd
        imagePullPolicy: IfNotPresent
#        image: fluent/fluentd:edge-debian
        image: docker-logging_fluentd:latest
        ports:
        - containerPort: 9292
          name: ui
          protocol: TCP
        - containerPort: 9880
          name: fluentbit
          protocol: TCP
        volumeMounts:
         - name: fluentd-config
           mountPath: /fluentd/etc
#      terminationGracePeriodSeconds: 30
      volumes:
      - name: fluentd-config
        configMap:
          name: fluentd-config
