logging/master/fluentd/fluentd_daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: logging
  labels:
    app: fluentd
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd
        imagePullPolicy: IfNotPresent
#        image: fluent/fluentd:edge-debian
        image: docker-elk_fluentd:latest
#        env:
#          - name:  FLUENT_ELASTICSEARCH_HOST
#            value: "elasticsearch.logging.svc.cluster.local"
#          - name:  FLUENT_ELASTICSEARCH_PORT
#            value: "9200"
#          - name: FLUENT_ELASTICSEARCH_SCHEME
#            value: "http"
#          - name: FLUENTD_SYSTEMD_CONF
#            value: disable
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
         - name: fluentd-config
           mountPath: /fluentd/etc/fluent.conf
           subPath: fluent.conf

      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluentd-config
        configMap:
          name: fluentd-config
---
apiVersion: v1
kind: Service
metadata:
  name: fluentd-nodeport
  namespace: logging
spec:
  type: NodePort
  selector:
    app: fluentd
  ports:
    - port: 9880
      nodePort: 30007
      name: http
      targetPort: 9880
      protocol: TCP
