logging/master/fluentd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fluentd-nodeport
  namespace: logging
spec:
  type: NodePort
  selector:
    app: fluentd
  ports:
    - port: 9880
      nodePort: 30007
      name: http
      targetPort: 9880
      protocol: TCP
