logging/master/fluentd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentd
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/use-regex: "true"  
spec:
  rules:
  - host: fluentd.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fluentd
            port:
              number: 9292
