logging/master/fluentd/ingress_old.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: fluentd
  namespace: logging 
spec:
  rules:
  - host: fluentd.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: fluentd
          servicePort: 9292
